# AutoMI

./: .gitignore  CMakeLists.txt  README.md
Quegel/: .gitignore  CMakeLists.txt
Quegel/app/bbfs/: run.cpp
Quegel/app/ibfs/: run.cpp
Quegel/app/sssp/: run.cpp
Quegel/client/: CMakeLists.txt
Quegel/client/batchFile_version/: Makefile  batch  run.cpp
Quegel/client/console_version/: Makefile  client
Quegel/system/ol/: VertexOL.h  VertexOL_h.old  WorkerOL.h  WorkerOL_auto.h
Quegel/system/utils/: global.h  ydhdfs.h  ydhdfs1.h  ydhdfs2.h  ydhdfs3.h
Quegel/tools/etuple2adj/: Makefile  convert  main.cpp
Quegel/tools/omp_etuple2adj/: Makefile  main.cpp
Quegel/tools/out2inout/: out2inout.h  run.cpp
Quegel/tools/put/: Makefile  put  put.cpp
scripts/: manual_sync.sh  mpirsync
scripts/aws/: AUTOMI_INIT  AUTOMI_MOUNT  bench_automi.sh  query-example.txt
src/graphlab/engine/: iengine.hpp  omni_engine.hpp  powerlyra_sync_engine.hpp  synchronous_engine.hpp
src/graphlab/graph/: builtin_parsers.hpp  distributed_graph.hpp
src/graphlab/logger/: logger.hpp
src/graphlab/util/: dimitra_automaton.hpp  dimitra_automaton_bk.hpp  dimitra_bitvec.hpp
toolkits/graph_automi/: CMakeLists.txt  automi_bbfs.cpp  automi_graph_coloring.cpp  automi_ibfs.cpp  automi_ppr.cpp  automi_sgd.cpp  automi_spmv.cpp  automi_sssp.cpp  multilyra_bbfs.cpp  multilyra_ibfs.cpp  multilyra_sssp.cpp  powerlyra_bbfs.cpp  powerlyra_graph_coloring.cpp  powerlyra_ibfs.cpp  powerlyra_ppr.cpp  powerlyra_sgd.cpp  powerlyra_spmv.cpp  powerlyra_sssp.cpp  track_bbfs.cpp  track_graph_coloring.cpp  track_ppr.cpp  track_spmv.cpp  track_sssp.cpp
utils/: clang_helper.py  converter.py  example_single_SSSP.cpp  program_ast.py  requirements.txt  track_sssp.cpp  trackfree_sssp.cpp
(+1 files in other folders)
